--- a/frontend/src/styles/Utils/_variables.scss
+++ b/frontend/src/styles/Utils/_variables.scss
@@ -1,14 +1,17 @@
 @font-face {
     font-family: "font-1";
     src: url(./assets/fonts/Lato-Light.ttf);
+    font-display: swap;
   }
   @font-face {
     font-family: "font-2";
     src: url(./assets/fonts/Lato-Regular.ttf);
+    font-display: swap;
   }
   @font-face {
     font-family: "font-3";
     src: url(./assets/fonts/Lato-Bold.ttf);
+    font-display: swap;
   }
   
   $font-1: "font-1", sans-serif;
