--- a/frontend/src/styles/Components/_card.scss
+++ b/frontend/src/styles/Components/_card.scss
@@ -219,7 +219,8 @@
         display: grid;
         padding: 15px;
         margin: 5px 0;
-  
+        border-radius: 20px;
+        border: 1px solid $color-3;
   
         img {
           height: 37px;
