--- a/frontend/src/styles/style.css
+++ b/frontend/src/styles/style.css
@@ -418,6 +418,8 @@ nav .nav-container ul li img {
   display: grid;
   padding: 15px;
   margin: 5px 0;
+  border-radius: 20px;
+  border: 1px solid #4E5166;
 }
 .card-container .card-right .comment-container img {
   height: 37px;
